--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,9 @@
 
-
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 0;
+}
+body {
+  
 }
