--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,14 @@
 
 * {
-  font-family: "Poppins";
+  font-family: "Poppins", sans-serif;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  
 
+}
+
+
+body {
+  background-color: #F8F8F8;
 }
